--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="petra(monument1).jpg" id="petra">
             <img src="sydney(monument4).jpg" id="sydneyOpera">
             <img src="9_11(monument5).jpg" id="911">
-            <img src="collesium(monument2).jpg" id- "collesium">
+            <img src="collesium(monument2).jpg" id="collesium">
             <img src="arcparis(monument3).jpg" id="arcparis">
 
             <!--National Parks-->
