--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
             <a-sphere visible="true" id="sphere1" src="#hanola" position="-7 0 -15" onclick="changeToBeach1()" radius="5"></a-sphere>
 
-            <a-sphere visible="true" id="sphere2" src="#redwood" position="7 0 -15" onclick="changeToParks()" radius="5"></a-sphere>
+            <a-sphere visible="true" id="sphere2" src="#redwood" position="7 0 -15" radius="5"></a-sphere>
 
-            <a-sphere visible="true" id="sphere3" src="#911" position="0 10 -15" onclick="changeToParks()" radius="5"></a-sphere>
+            <a-sphere visible="true" id="sphere3" src="#911" position="0 10 -15" radius="5"></a-sphere>
 
 
 
